bin_PROGRAMS = coco
coco_SOURCES = main.cpp PyAttr.cpp PyBool.cpp PyBoolType.cpp PyBuiltInConcat.cpp PyBuiltInFPrint.cpp PyBuiltInInput.cpp PyBuiltInIter.cpp PyBuiltInLen.cpp PyBuiltInPrint.cpp PyBuiltInTPrint.cpp PyByteCode.cpp PyCallable.cpp PyCell.cpp PyCode.cpp PyException.cpp PyExceptionType.cpp PyFloat.cpp PyFloatType.cpp PyFrame.cpp PyFunction.cpp PyFunList.cpp PyFunListIterator.cpp PyInt.cpp PyIntType.cpp PyList.cpp PyListIterator.cpp PyListType.cpp PyNone.cpp PyNoneType.cpp PyObject.cpp PyParser.cpp PyRange.cpp PyRangeIterator.cpp PyRangeType.cpp PyScanner.cpp PyStr.cpp PyStrIterator.cpp PyToken.cpp PyTuple.cpp PyTupleIterator.cpp PyType.cpp PyTypeType.cpp PyUtil.cpp
